<!--
  ~ Copyright (C) 2015-2016 Daniel Schaal <daniel@schaal.email>
  ~
  ~ This file is part of OCReader.
  ~
  ~ OCReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OCReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OCReader.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="email.schaal.ocreader.ListActivity">

    <item
        android:id="@+id/action_mark_read"
        android:checkable="true"
        android:icon="@drawable/ic_check_box"
        android:title="@string/action_mark_read"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_mark_unread"
        android:checkable="true"
        android:icon="@drawable/ic_check_box_outline_blank"
        android:title="@string/action_mark_unread"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_mark_starred"
        android:checkable="true"
        android:icon="@drawable/ic_star"
        android:title="@string/action_mark_starred"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_mark_unstarred"
        android:checkable="true"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/action_mark_unstarred"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_mark_above_read"
        android:checkable="true"
        android:icon="@drawable/ic_done_above"
        android:title="@string/mark_previous_articles_read"
        app:showAsAction="ifRoom"/>
</menu>
