<!--
  ~ Copyright © 2019. Daniel Schaal <daniel@schaal.email>
  ~
  ~ This file is part of ocreader.
  ~
  ~ ocreader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ocreader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="email.schaal.ocreader.ItemPagerActivity">

    <item
        android:id="@+id/menu_mark_starred"
        android:title="@string/action_mark_starred"
        android:icon="@drawable/ic_star"
        android:checkable="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_mark_read"
        android:title="@string/action_mark_read"
        android:icon="@drawable/ic_check_box"
        android:checkable="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_play_enclosure_media"
        android:title="@string/play_media"
        android:icon="@drawable/ic_play_arrow"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_article"
        android:title="@string/share_article"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />
</menu>
