<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Daniel Schaal <daniel@schaal.email>
  ~
  ~ This file is part of OCReader.
  ~
  ~ OCReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OCReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OCReader.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selectable_background"
        android:padding="@dimen/materialize_spacing"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imageview_favicon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/favicon_background"
            android:contentDescription="@string/feed_icon_description"
            android:padding="@dimen/icon_padding"
            android:layout_marginEnd="@dimen/materialize_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textViewTitle"
            tools:src="@drawable/ic_feed_icon" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintStart_toEndOf="@id/imageview_favicon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="This is the article title" />

        <TextView
            android:id="@+id/textViewFeedTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textViewTime"
            app:layout_constraintStart_toStartOf="@id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintVertical_bias="1.0"
            tools:text="Feed title" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="@dimen/play_button"
            android:layout_height="@dimen/play_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/play_media"
            android:focusable="true"
            android:src="@drawable/ic_play_circle_outline"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/textViewFeedTitle"
            app:layout_constraintEnd_toStartOf="@id/imageview_star"
            app:layout_constraintStart_toEndOf="@id/textViewTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?colorOnSurface"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageview_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/starred"
            android:src="@drawable/ic_star"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/textViewFeedTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/star"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewFeedTitle"
            tools:text="1h" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>